--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,11 +1,12 @@
 name: Test Demetra App
 on: push
 jobs:
-  runs-on: windows-latest
-  steps:
-    - name: Get repository code
-      uses: actions/checkout@v4
-    - name: Install dependencies
-      run: npm ci
-    - name: Test application
-      run: npm run test
+  test:
+    runs-on: windows-latest
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm ci
+      - name: Test application
+        run: npm run test
