--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,8 +1,11 @@
 name: Print Pull Request Context
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  pull_request:
+    types: [opened, closed, reopened]
 jobs:
   print:
     runs-on: windows-latest
     steps:
       - name: Print context
-        run: echo "${{ toJSON(job) }}"
+        run: echo "${{ toJSON(github.event) }}"
