--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -11,41 +11,41 @@ jobs:
     steps:
       - name: Get repository code
         uses: actions/checkout@v4
-      - name: Cache dependencies
-        uses: action/cache@v3
-        with:
-          path: ~/.npm
-          key: node-module-${{ hashFiles('**/package-lock.json') }}
+#      - name: Cache dependencies
+#        uses: action/cache@v3
+#        with:
+#          path: ~/.npm
+#          key: node-module-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Test application
         run: npm run test
   lint:
     runs-on: windows-latest
-    needs: test
+#    needs: test
     steps:
       - name: Get repository code
         uses: actions/checkout@v4
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+#      - name: Cache dependencies
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.npm
+#          key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Lint application
         run: npm run lint
   build:
     runs-on: windows-latest
-    needs: lint
+    needs: [lint, test]
     steps:
       - name: Get repository code
         uses: actions/checkout@v4
-      - name: Cache dependencies
-        uses: action/cache@v3
-        with:
-          path: ~/.npm
-          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+#      - name: Cache dependencies
+#        uses: action/cache@v3
+#        with:
+#          path: ~/.npm
+#          key: node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Build application
