--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -36,11 +36,19 @@ jobs:
       - name: Lint application
         run: npm run lint
   build:
-    runs-on: windows-latest
     needs: [lint, test]
+    strategy:
+      matrix:
+        node_version: [14, 16]
+        os: [windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Get repository code
         uses: actions/checkout@v4
+      - name: Install Node JS
+        uses:  actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
 #      - name: Cache dependencies
 #        uses: action/cache@v3
 #        with:
