--- a/workflow-samples/deployment.yaml
+++ b/workflow-samples/deployment.yaml
@@ -37,6 +37,7 @@ jobs:
         run: npm run lint
   build:
     needs: [lint, test]
+    continue-on-error: true
     strategy:
       matrix:
         node_version: [14, 16]
