--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Dist
 on: [push, workflow_dispatch]
 jobs:
   build:
@@ -13,6 +13,6 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          path: build
-          name: build-files
+          path: dist
+          name: dist-files
 
