--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,63 @@
-name: Dist
-on: [push, workflow_dispatch]
+name: CI Demetra App
+on:
+  push:
+    branches:
+      - main
+#    paths-ignore:
+#      - '.github/workflows/*'
 jobs:
-  build:
+  test:
     runs-on: windows-latest
     steps:
-      - name: Get Code
+      - name: Get repository code
         uses: actions/checkout@v4
+      #      - name: Cache dependencies
+      #        uses: action/cache@v3
+      #        with:
+      #          path: ~/.npm
+      #          key: node-module-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        uses: npm ci
-      - name: Build project
-        uses: npm run build
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        run: npm ci
+      - name: Test application
+        run: npm run test
+  lint:
+    runs-on: windows-latest
+    #    needs: test
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      #      - name: Cache dependencies
+      #        uses: actions/cache@v3
+      #        with:
+      #          path: ~/.npm
+      #          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint application
+        run: npm run lint
+  build:
+    needs: [lint, test]
+    continue-on-error: true
+    strategy:
+      matrix:
+        node_version: [14, 16]
+        os: [windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Get repository code
+        uses: actions/checkout@v4
+      - name: Install Node JS
+        uses:  actions/setup-node@v4
         with:
-          path: dist
-          name: dist-files
-
+          node-version: ${{ matrix.node-version }}
+      #      - name: Cache dependencies
+      #        uses: action/cache@v3
+      #        with:
+      #          path: ~/.npm
+      #          key: node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Build application
+        run: npm run build
+      - name: Deploy
+        run: echo Deploying...
