--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,12 @@ services:
     image: postgres
     ports:
       - 5432:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: aknur.taubay
     volumes:
-      - postgres:/data
+      - postgres:/var/lib/postgresql/data
 
 volumes:
   redis:
